Remote Control Competition - small correction :D