@@ -2,7 +2,6 @@ package org.adrian.com.remoteControlCompetition;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class TestTrack {
 
@@ -13,6 +12,6 @@ public class TestTrack {
     public static List<ProductionRemoteControlCar> getRankedCars(List<ProductionRemoteControlCar> unsortedCars) {
         return unsortedCars.stream()
                 .sorted(Comparator.comparingInt(ProductionRemoteControlCar::getNumbersOfVictories).reversed())
-                .collect(Collectors.toList());
+                .toList();
     }
 }
